--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  animated_background: ^2.0.0
   google_fonts: ^5.1.0
   video_player: ^2.7.0
 
@@ -80,6 +79,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+      - family: Poppins
+        fonts:
+          - asset: assets/fonts/Poppins-Regular.ttf
+          - asset: assets/fonts/Poppins-Bold.ttf
+          - asset: assets/fonts/Poppins-Italic.ttf
+
   # fonts:
   #   - family: Schyler
   #     fonts:
